--- a/src/AppBundle/Resources/public/css/init.sass
+++ b/src/AppBundle/Resources/public/css/init.sass
@@ -1,9 +1,21 @@
 // VARS
 $main-color: #C24C4A
-$main-color-hover: #762D2B
-$main-color-active: #441A19
-$content: #444
+$main-color-hover: #B04B47
+$main-color-active: #B04B47
+$title: #282828
+$content: #444444
+$texts: #777777
+$placeholder: #CCCCCC
+$button-hover: #DEDEDE
+$borders: rgba(0,0,0,.1)
+$highlight: #F3F3F3
+$disabled: #FAFAFA
 $background: #EEEEEE
+
+$infos: #02AAE9
+$success: #0ABC4B
+$warning: #F7CA18
+$danger: #F23F2D
 
 // ICONS
 $logo: "\e911"
@@ -24,5 +36,7 @@ $icon-infos: "\e905"
 $icon-search: "\e906"
 $icon-cross: "\e90c"
 $icon-warning: "\e90b"
+$icon-explore: "\e912"
+$icon-right: "\e913"
 
 @import mixin
