--- a/src/PP/MessageBundle/Resources/public/css/style.sass
+++ b/src/PP/MessageBundle/Resources/public/css/style.sass
@@ -265,6 +265,13 @@ section.overlay-messages
 									justify-content: flex-start
 									word-wrap: break-word
 
+									a
+										text-decoration: underline
+
+										&:hover
+											background: rgba(0,0,0,.1)
+											border-radius: 2px
+
 								&.me
 									float: right
 									justify-content: flex-end
@@ -275,6 +282,13 @@ section.overlay-messages
 										color: white
 										margin-left: 0
 										margin-right: 5px
+
+										a
+											color: white
+
+											&:hover
+												background: rgba(255,255,255,.1)
+												border-radius: 2px
 									
 									.avatar
 										opacity: 0
