--- a/src/PP/PageBundle/Resources/views/help/header.html.twig
+++ b/src/PP/PageBundle/Resources/views/help/header.html.twig
@@ -1,8 +1,13 @@
 <header class="helpcenter">
 	<div class="content">
 		<h1 class="logo">
-            <a tabindex="1" target="_self" href="{{ url("page_help") }}" title="Prestapic">Prestapic</a> 
+            <a tabindex="1" target="_self" href="{{ url("pp_request_homepage") }}" title="Prestapic">Prestapic</a> 
         </h1>
-        <a class="button" href="{{ url("pp_request_homepage") }}">Back to Prestapic</a>
+        <div class="helpcenter-title">
+        	<a href="{{ url("page_help") }}">Help Center</a>
+        </div>
+        <div class="helpcenter-right">
+        	<a class="button" href="{{ url("pp_request_homepage") }}">Back to Prestapic</a>
+        </div>
 	</div>
 </header>
