--- a/src/PP/UserBundle/Resources/public/css/style.sass
+++ b/src/PP/UserBundle/Resources/public/css/style.sass
@@ -462,6 +462,13 @@ section.profile-galery
 							span.fcontent-choice-item-desc
 								color: #BBB
 
+					.fcontent-choice-link
+						padding: 5px 15px
+						font-size: 20px
+
+						&:first-child
+							padding-top: 15px
+
 			.fcontent-bottom
 				padding: 10px 15px
 				display: block
