--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -15,6 +15,7 @@
         '@PPUserBundle/Resources/public/css/style.sass'
         '@PPRequestBundle/Resources/public/css/style.sass'
         '@PPPropositionBundle/Resources/public/css/style.sass'
+        '@PPPageBundle/Resources/public/css/style.sass'
         '@PPMessageBundle/Resources/public/css/style.sass' %}
         <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
     {% endstylesheets %}        
@@ -55,12 +56,16 @@
                 <div class="content">
                     {% block body %}
                     {% endblock %}
+                    
+                    <div id="sideInfo" class="sidebar">
+                        {% block sideInfoTop %}
 
-                    {% block sideInfo %}                                        
-                            <div id="sideInfo" class="sidebar">
-                                {{ render(controller("PPRequestBundle:Request:sideInfo")) }}                                        
-                            </div>
-                    {% endblock %}
+                        {% endblock %}
+
+                        {% block sideInfo %}                                        
+                            {{ render(controller("PPRequestBundle:Request:sideInfo")) }}                                        
+                        {% endblock %}
+                    </div>
                 </div>
             </section>                                        
         </div>
